--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item" />
-      <button>Add item</button>
+      <button class="add-item">Add item</button>
     </div>
 
     <ul></ul>
